# PromptEngine

./: .gitignore  AI_SLOP_NOTES.md  DESIGN.md  DYNAMIC_SECTIONS_PLAN.md  Dockerfile  MEMORY_DESIGN.md  MEMORY_EXTENSIONS_PLAN.md  PROMPT_ENGINE_DESIGN.md  README.md  pyproject.toml  run.py  tool.html  zensical.toml
.github/workflows/: workflow.yml
docs/: design.md  index.md  server.md
ensemble/: cli.py  engine.py
prompt_constructor/: BUILDER_API.md  README.md  builder_routes.py  ensemble_routes.py  main.py  memory_routes.py  run.py  scenario_library.json
prompt_constructor/ensemble/: __init__.py  cli.py  engine.py
prompt_constructor/static/: appv2.js  chatbuilder.css  chatbuilder.html  chatbuilder.js  ensemble.css  ensemble.html  ensemble.js  index.html  indexv2.html  landing.css  landing.js  ollama_client.js  stylev2.css  templatebuilder.css  templatebuilder.html  templatebuilder.js
prompt_engine/: __init__.py  config.py
prompt_engine/assets/: registry.py
promptlibretto/: __init__.py  export.py  serialize.py
server/: main.py
studio/: README.md  builder_routes.py  ensemble_routes.py  export_library.py  main.py  memory_routes.py  middleware.py  presets.py  run.py
testbench/: README.md  base_library.py  main.py
tests/: conftest.py  test_builders.py  test_engine.py  test_ensemble_engine.py  test_ergonomics.py  test_export.py  test_memory_extensions.py  test_memory_paths.py  test_middleware_and_streaming.py  test_ollama_provider.py  test_overlays_and_budget.py  test_registry.py  test_registry_builder_api.py  test_routing.py  test_section_overrides.py
(+68 files in other folders)
